  surviving the parent process; the confirmation prompt on application close
  now features a "Terminate", "Leave" and "Cancel" button options.

- New command-line wrapper feature for JACK client applications, thus
  giving a convenient head start for the JACK audio server as needed
  (as suggested by Fernando Pablo Lopez-Lezcano, of Planet CCRMA fame).


0.2.4  2004-02-01  Exclusive patchbay sockets.

- Patchbay definitions may now be configured with exclusive sockets;
  this way, only one defined connection is allowed as soon as it's available,
  being all others immediatelly disconnected whenever attempted.

- On the connections view, current connected client ports are now slightly
  highlighted (blue) whenever a client or port is selected on the opposite
  column (as suggested by Lawrie Abbott).

- Connections and patchbay drag and drop feature is now bilateral; you can
  now drag and drop an item from right to left to establish the connection.


0.2.3a 2004-01-19  Time format combo-box tooltip fix.

- A qt-designer copy-paste leftover has been fixed; sloppy boy I am ;)


0.2.3  2004-01-19  Tenths, hundredths, milliseconds, whatever.

- Custom time format setup for all elapsed times, allowing the display
  of tenths, hundredths or even milliseconds instead of just hundredths
  of second for transport time code.


0.2.2   2004-01-16  Hundredths are back.

- Transport time is now shown with hundredths of second (hh:mm:ss.dd),
  as it was once before but not constant zero.

- Client start delay now configurable on setup; this may be of help for
  slow machines or unusual long server driver startups (e.g. portaudio).

- Client-only mode restart has been fixed.

- Messages color retouching.

- Popup menus memory leak fixed.


0.2.1   2003-12-29  The fix of fixes.

- Fixed jackstart/jackd command line parameter argument concatenation.

- Front panel status display font can now be customized.

- Some connection graph changes were being silently missed, now fixed.
